--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "4.2.9",
-    "@mantine/hooks": "4.2.9",
-    "@mantine/next": "4.2.9",
+    "@mantine/core": "4.2.10",
+    "@mantine/hooks": "4.2.10",
+    "@mantine/next": "4.2.10",
+    "@mantine/notifications": "^4.2.10",
     "next": "^12.1.7-canary.41",
     "react": "18.2.0",
     "react-dom": "18.2.0",
