--- a/package.json
+++ b/package.json
@@ -20,9 +20,15 @@
   "devDependencies": {
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
-    "eslint-config-prettier": "8.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "eslint": "^8.18.0",
+    "eslint-config-next": "^12.1.6",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import-access": "^1.0.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-sort-destructure-keys": "^1.4.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "2.7.1",
     "typescript": "4.7.4"
   }
